[metadata]
name = PwnAtlas
version = 0.1Beta
author = Diante J.
author_email = diante.jackson@proton.me
url = https://github.com/diante0x7/PwnAtlas
description = CVE and ExploitDB Search Tool
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
install_requires =
    requests
    bs4

[options.package_data]
* = README.md