[metadata]
name = PwnAtlas
version = 0.1b2
author = Diante J.
author_email = diante.jackson@proton.me
url = https://github.com/CougarCS-InfoSec/PwnAtlas
description = CVE and ExploitDB Search Tool
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
install_requires =
    requests
    bs4

[options.packages.find]
where = 
    .
    .util

[options.package_data]
* = README.md